Attempt n.2 to fix overlay on Safari in iOS

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -39,6 +39,7 @@ html, body {
 .page-content.navigation--open {
 	max-height: 100vh;
 	overflow: hidden;
+	width: -webkit-calc(100% - 0px);
 }
 
 
@@ -77,6 +78,7 @@ html, body {
 	max-height: 100vh;
 	height: 100vh;
 	opacity: 1;
+	width: -webkit-calc(100% - 0px);
 }
 
 // Open navigation page overlay
